--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Simple JS calculator with clean design">
 
-        <link rel="icon" type="image/x-icon" href="favicon.ico?v=2">
+        <link rel="icon" type="image/x-icon" href="src/favicon.ico?v=2">
         <link rel="stylesheet" 
         href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="src/style.css">
 
         <title>calc-js</title>
 
@@ -20,6 +20,7 @@
 
         <h1> WIP </h1>
 
+        <script src="src/app.js"></script>
     </body>
 
 </html>
