Basic frontend done/added footer with linked icons

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="Simple JS calculator with clean design">
 
-		<link rel="icon" type="image/x-icon" href="src/favicon.ico?v=2">
+		<link rel="icon" type="image/x-icon" href="src/icons/favicon.ico">
 		<link rel="stylesheet" 
 		href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
 		<link rel="stylesheet" href="src/style.css">
@@ -162,6 +162,17 @@
 				</div>
 
 			</form>
+
+		</div>
+
+		<div class="footer">
+
+			<a href="https://twitter.com/fpetrovicch/" target="_blank">
+			<img src="src/icons/twitter.png" height="80rem"/></a>
+
+			<a href="https://github.com/fpetrovicc" target="_blank">
+			<img src="src/icons/github.png" height="60rem" 
+			style="margin-bottom: 0.7rem;"/></a>
 
 		</div>
 
