Validated *finished* front-end HTML & CSS

--- a/index.html
+++ b/index.html
@@ -168,11 +168,10 @@
 		<div class="footer">
 
 			<a href="https://twitter.com/fpetrovicch/" target="_blank">
-			<img src="src/icons/twitter.png" height="80rem"/></a>
+			<img src="src/icons/twitter.png" class="twitter" alt="Twitter Icon"/></a>
 
 			<a href="https://github.com/fpetrovicc" target="_blank">
-			<img src="src/icons/github.png" height="60rem" 
-			style="margin-bottom: 0.7rem;"/></a>
+			<img src="src/icons/github.png" class="github" alt="GitHub Icon"/></a>
 
 		</div>
 
