--- a/index.html
+++ b/index.html
@@ -168,10 +168,10 @@
 		<div class="footer">
 
 			<a href="https://twitter.com/fpetrovicch/" target="_blank">
-			<img src="src/icons/twitter.png" class="twitter" alt="Twitter Icon"/></a>
+			<img src="src/icons/twitter.png" class="twitter" alt="Twitter Icon" rel="noopener"/></a>
 
 			<a href="https://github.com/fpetrovicc" target="_blank">
-			<img src="src/icons/github.png" class="github" alt="GitHub Icon"/></a>
+			<img src="src/icons/github.png" class="github" alt="GitHub Icon" rel="noopener"/></a>
 
 		</div>
 
