Added author meta tag

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="Simple JS calculator with clean design">
+		<meta name="author" content="Filip Petrovic">
 
 		<link rel="icon" type="image/x-icon" href="src/icons/favicon.ico">
 		<link rel="stylesheet" 
