--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<link rel="icon" type="image/x-icon" href="src/icons/favicon.ico">
 		<link rel="stylesheet" 
 		href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
-		<link rel="stylesheet" href="src/style.css" type="text/css">
+		<link rel="stylesheet" href="./src/style.css" type="text/css">
 
 		<title>calc-js</title>
 
