Fixing compatibility issues

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 				 	<div class="inputArea">
 
-						<input type="text" name="userInput" placeholder="0">
+						<input type="text" name="userInput" placeholder="0" autocomplete="off">
 
 					</div>
 
