Added basic number inserting & clear screen feature.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 				 	<div class="inputArea">
 
-						<input type="text" name="userInput" placeholder="0" autocomplete="off">
+						<input type="text" id="userInput" placeholder="0" autocomplete="off">
 
 					</div>
 
@@ -38,7 +38,7 @@
 					<!-- First row -->
 					<div class="btnC btnr1">
 
-						<input type="button" value="C" onclick="">
+						<input type="button" value="C" onclick="clearField()">
 
 					</div>
 
@@ -63,19 +63,19 @@
 					<!-- Second row -->
 					<div class="btn7 btnr2">
 
-						<input type="button" value="7" onclick="">
+						<input type="button" value="7" class="digit" onclick="">
 
 					</div>
 
-					<div class="btn8 btnr2">
+					<div class="btn8 btnr2 ">
 
-						<input type="button" value="8" onclick="">
+						<input type="button" value="8" class="digit" onclick="">
 
 					</div>
 
 					<div class="btn9 btnr2">
 
-						<input type="button" value="9" onclick="">
+						<input type="button" value="9" class="digit" onclick="">
 
 					</div>
 
@@ -88,19 +88,19 @@
 					<!-- Third row -->
 					<div class="btn4 btnr2">
 
-						<input type="button" value="4" onclick="">
+						<input type="button" value="4" class="digit" onclick="">
 
 					</div>
 
 					<div class="btn5 btnr2">
 
-						<input type="button" value="5" onclick="">
+						<input type="button" value="5" class="digit" onclick="">
 
 					</div>
 
 					<div class="btn6 btnr2">
 
-						<input type="button" value="6" onclick="">
+						<input type="button" value="6" class="digit" onclick="">
 
 					</div>
 
@@ -113,19 +113,19 @@
 					<!-- Fourth row -->
 					<div class="btn1 btnr2">
 
-						<input type="button" value="1" onclick="">
+						<input type="button" value="1" class="digit" onclick="">
 
 					</div>
 
 					<div class="btn2 btnr2">
 
-						<input type="button" value="2" onclick="">
+						<input type="button" value="2" class="digit" onclick="">
 
 					</div>
 
 					<div class="btn3 btnr2">
 
-						<input type="button" value="3" onclick="">
+						<input type="button" value="3" class="digit" onclick="">
 
 					</div>
 
@@ -144,7 +144,7 @@
 
 					<div class="btn0 btnr2">
 
-						<input type="button" value="0" onclick="">
+						<input type="button" value="0" class="digit" onclick="">
 
 					</div>
 
@@ -166,16 +166,7 @@
 
 		</div>
 
-		<div class="footer">
-
-			<a href="https://twitter.com/fpetrovicch/" target="_blank">
-			<img src="src/icons/twitter.png" class="twitter" alt="Twitter Icon" rel="noopener"/></a>
-
-			<a href="https://github.com/fpetrovicc" target="_blank">
-			<img src="src/icons/github.png" class="github" alt="GitHub Icon" rel="noopener"/></a>
-
-		</div>
-
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 		<script src="src/app.js"></script>
 		
 	</body>
