Starting to integrate evaluation lib

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 					<div class="btnD btnr1">
 
-						<input type="button" value="/" onclick="">
+						<input type="button" value="/" class="operator" onclick="">
 
 					</div>
 					
@@ -81,7 +81,7 @@
 
 					<div class="btnX btnr1">
 
-						<input type="button" value="*" onclick="">
+						<input type="button" value="*" class="operator" onclick="">
 
 					</div>
 
@@ -106,7 +106,7 @@
 
 					<div class="btnM btnr1">
 
-						<input type="button" value="-" onclick="">
+						<input type="button" value="-" class="operator" onclick="">
 
 					</div>
 
@@ -131,7 +131,7 @@
 
 					<div class="btnA btnr1">
 
-						<input type="button" value="+" onclick="">
+						<input type="button" value="+" class="operator" onclick="">
 
 					</div>
 
@@ -156,7 +156,7 @@
 
 					<div class="btnE btnr1">
 
-						<input type="button" value="=" onclick="">
+						<input type="button" value="=" class="operator" onclick="">
 
 					</div>
 
