--- a/index.html
+++ b/index.html
@@ -23,16 +23,18 @@
 
 			<form name="calculator" class="child">
 
+				<!-- Display -->
 				<div class="wrapper">
 
 				 	<div class="inputArea">
 
-						<input type="text" id="userInput" placeholder="0" autocomplete="off">
+						<input type="text" id="userInput" maxlength="11" placeholder="0" autocomplete="off">
 
 					</div>
 
 				</div>
 
+				<!-- Buttons -->
 				<div class="buttons">
 					
 					<!-- First row -->
@@ -44,119 +46,119 @@
 
 					<div class="btnMod btnr1">
 
-						<input type="button" value="%" onclick="">
+						<input type="button" value="%" class="operator">
 
 					</div>
 
 					<div class="btnSign btnr1">
 
-						<input type="button" value="+/-" onclick="">
+						<input type="button" value="+/-" disabled>
 
 					</div>
 
 					<div class="btnD btnr1">
 
-						<input type="button" value="/" class="operator" onclick="">
+						<input type="button" value="/" class="operator">
 
 					</div>
 					
 					<!-- Second row -->
 					<div class="btn7 btnr2">
 
-						<input type="button" value="7" class="digit" onclick="">
+						<input type="button" value="7" class="digit">
 
 					</div>
 
 					<div class="btn8 btnr2 ">
 
-						<input type="button" value="8" class="digit" onclick="">
+						<input type="button" value="8" class="digit">
 
 					</div>
 
 					<div class="btn9 btnr2">
 
-						<input type="button" value="9" class="digit" onclick="">
+						<input type="button" value="9" class="digit">
 
 					</div>
 
 					<div class="btnX btnr1">
 
-						<input type="button" value="*" class="operator" onclick="">
+						<input type="button" value="*" class="operator">
 
 					</div>
 
 					<!-- Third row -->
 					<div class="btn4 btnr2">
 
-						<input type="button" value="4" class="digit" onclick="">
+						<input type="button" value="4" class="digit">
 
 					</div>
 
 					<div class="btn5 btnr2">
 
-						<input type="button" value="5" class="digit" onclick="">
+						<input type="button" value="5" class="digit">
 
 					</div>
 
 					<div class="btn6 btnr2">
 
-						<input type="button" value="6" class="digit" onclick="">
+						<input type="button" value="6" class="digit">
 
 					</div>
 
 					<div class="btnM btnr1">
 
-						<input type="button" value="-" class="operator" onclick="">
+						<input type="button" value="-" class="operator">
 
 					</div>
 
 					<!-- Fourth row -->
 					<div class="btn1 btnr2">
 
-						<input type="button" value="1" class="digit" onclick="">
+						<input type="button" value="1" class="digit">
 
 					</div>
 
 					<div class="btn2 btnr2">
 
-						<input type="button" value="2" class="digit" onclick="">
+						<input type="button" value="2" class="digit">
 
 					</div>
 
 					<div class="btn3 btnr2">
 
-						<input type="button" value="3" class="digit" onclick="">
+						<input type="button" value="3" class="digit">
 
 					</div>
 
 					<div class="btnA btnr1">
 
-						<input type="button" value="+" class="operator" onclick="">
+						<input type="button" value="+" class="operator">
 
 					</div>
 
 					<!-- Fifth row -->
 					<div class="btnDecimal btnr2">
 
-						<input type="button" value="." onclick="">
+						<input type="button" value="." class="operator">
 
 					</div>
 
 					<div class="btn0 btnr2">
 
-						<input type="button" value="0" class="digit" onclick="">
+						<input type="button" value="0" class="digit">
 
 					</div>
 
 					<div class="btnBack btnr2">
 
-						<input type="button" value="<" onclick="">
+						<input type="button" value="<" onclick="backspace()">
 
 					</div>
 
 					<div class="btnE btnr1">
 
-						<input type="button" value="=" class="operator" onclick="">
+						<input type="button" value="=" class="operator">
 
 					</div>
 
@@ -166,7 +168,9 @@
 
 		</div>
 
+		<!-- Javascript loading -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/9.3.0/math.js"></script>
 		<script src="src/app.js"></script>
 		
 	</body>
